commented back end, cleaned folders

--- a/FRONT/INDEX/index.html
+++ b/FRONT/INDEX/index.html
@@ -5,7 +5,11 @@
 		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
 		<title>Social Network</title>
 		<link rel="stylesheet" href="../CSS/main.css" />
-		<link rel="shortcut icon" href="../MEDIA/favicon-32x32.png" type="image/x-icon">
+		<link
+			rel="shortcut icon"
+			href="../MEDIA/favicon-32x32.png"
+			type="image/x-icon"
+		/>
 	</head>
 	<body>
 		<header
@@ -101,7 +105,7 @@
 			</div>
 			<div class="mx-24 max-w-7xl px-6 lg:px-8">
 				<div
-					class="pb-8 mx-auto w-80% lg:mx-0 h-80 flex flex-col justify-between p-3.5"
+					class="pb-8 mx-auto w-2/3 gap-12 lg:mx-0 min-h-fit max-h-3/4 flex flex-col text-justify justify-between p-3.5"
 				>
 					<h2
 						class="text-4xl font-bold tracking-tight text-white sm:text-6xl"
@@ -109,8 +113,10 @@
 						Welcome to Social Network
 					</h2>
 					<p class="text-lg leading-8 text-gray-300">
-						Here you can post, comment, like and dislike, follow
-						others or be followed !
+						Here on Social Network, you can create your own posts to
+						share with the world. You can also comment, give likes
+						or dislikes to other posts, follow others or be followed
+						!
 					</p>
 
 					<a href="../AUTH/register.html"
