--- a/FRONT/AUTH/login.html
+++ b/FRONT/AUTH/login.html
@@ -33,7 +33,7 @@
 		</header>
 
 		<main
-			class="flex flex-col justify-center px-6 py-12 lg:px-8 bg-slate-800"
+			class="flex flex-col justify-center min-h-[80vh] px-6 py-12 lg:px-8 bg-slate-800"
 		>
 			<div
 				class="items-center flex flex-col justify-center sm:mx-auto sm:w-full sm:max-w-sm"
@@ -46,7 +46,7 @@
 				<h1 class="mt-5 text-2xl font-bold text-slate-50">Log in</h1>
 			</div>
 
-			<div class="mt-10 lg:w-1/2 sm:mx-auto sm:w-full sm:max-w-sm">
+			<div class="mt-10 mb-10 lg:w-1/2 sm:mx-auto sm:w-full sm:max-w-sm">
 				<div class="space-y-6">
 					<div>
 						<label
