--- a/FRONT/USER/HOME/user.html
+++ b/FRONT/USER/HOME/user.html
@@ -65,7 +65,7 @@
 			class="relative flex flex-col justify-evenly gap-40 px-6 py-12 lg:px-8 bg-slate-800 pb-64 pt-24"
 		>
 			<!-- Bouton création de post --------------------------------------------------------------------------------------------->
-			<div class="w-full flex flew-row justify-center">
+			<div class="w-full flex flew-row justify-center -mb-20">
 				<button
 					onclick="handleCreatePost()"
 					class="bg-sky-500 p-2.5 rounded-lg text-white hover:bg-sky-700 h-24 w-56 createPost"
@@ -201,7 +201,7 @@
 								<div>
 									<button
 										type="submit"
-										onclick="createComment(id)"
+										onclick="handleCreateComment()"
 										class="flex w-full justify-center rounded-md bg-sky-700 px-3 py-1.5 text-sm font-semibold leading-6 text-white shadow-sm hover:bg-sky-500 focus-visible:outline focus-visible:outline-2 focus-visible:outline-offset-2 focus-visible:outline-indigo-600"
 									>
 										Submit
