--- a/FRONT/USER/PROFILE/profile.html
+++ b/FRONT/USER/PROFILE/profile.html
@@ -26,9 +26,11 @@
 			<ul class="flex flex-row gap-5 divide-x">
 				<a href="../HOME/user.html"><li class="">Home</li></a>
 				<li class="pl-3 underline">Profile</li>
-				<a href="../MY_POSTS/myposts.html"><li class="pl-3">My posts</li></a
+				<a href="../MY_POSTS/myposts.html"
+					><li class="pl-3">My posts</li></a
 				>
-				<a href="../MY_FOLLOWS/myfollows.html"><li class="pl-3">My follows</li></a
+				<a href="../MY_FOLLOWS/myfollows.html"
+					><li class="pl-3">My follows</li></a
 				>
 			</ul>
 
@@ -62,4 +64,5 @@
 		src="https://kit.fontawesome.com/120f5ae848.js"
 		crossorigin="anonymous"
 	></script>
+	<script src="profile.js"></script>
 </html>
